src/objects/ADvendio__TextBlock__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Caption__c</fullName>
        <inlineHelpText>This caption will be displayed in bold typeface.</inlineHelpText>
        <label>Caption</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ADvendio__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>German</fullName>
                    <default>true</default>
                    <label>German</label>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ShortDescription__c</fullName>
        <label>Short Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__SortOrder__c</fullName>
        <inlineHelpText>The text blocks are shown in this order.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                    <default>true</default>
                    <label>Order</label>
                </value>
                <value>
                    <fullName>Order Confirmation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ValidFrom__c</fullName>
        <label>Valid from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ADvendio__ValidUntil__c</fullName>
        <label>Valid until</label>
        <type>Date</type>
    </fields>
    <label>Text Block</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__ShortDescription__c</columns>
        <columns>ADvendio__Caption__c</columns>
        <columns>ADvendio__Language__c</columns>
        <columns>ADvendio__Type__c</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>ADvendio__Content__c</columns>
        <columns>ADvendio__ValidFrom__c</columns>
        <columns>ADvendio__ValidUntil__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ADvendio__All2</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Active__c</columns>
        <columns>ADvendio__ShortDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Text Block Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Text Blocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>